src/objects/HPP_extended_opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Offer_sent_to_offer_returned__c</fullName>
        <formula>Offer_returned_field__c  -  Offer_letter_sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer sent to offer returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Copies_Epitome__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Office Copies/Epitome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_hold_since_date__c</fullName>
        <label>On hold since date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>HPP extended opportunities</relationshipLabel>
        <relationshipName>HPP_extended_opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Offer_Letter__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Original Offer Letter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Offer_Sent_Date__c</fullName>
        <description>C00203</description>
        <label>Original Offer Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_funds_sent_date__c</fullName>
        <description>C00179</description>
        <label>Original funds sent date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_offer_sent_to_IBB_solicitors__c</fullName>
        <label>Original offer sent to our solicitors</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_payment_account_no__c</fullName>
        <label>Other payment account no</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_payment_method__c</fullName>
        <label>Other payment method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Transfer</fullName>
                </value>
                <value>
                    <fullName>External Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_payment_sortcode__c</fullName>
        <label>Other payment sortcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_fees_payment_date__c</fullName>
        <label>Outstanding fees payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outstanding_fees_payment_method__c</fullName>
        <label>Outstanding fees payment method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Internal transfer</fullName>
                </value>
                <value>
                    <fullName>External transfer</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Over_17_will_occupy_property__c</fullName>
        <inlineHelpText>How many people over 17 will occupy the property?</inlineHelpText>
        <label>Over 17 will occupy property?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PP_Address_Match_Comments__c</fullName>
        <label>PP Address Match Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PP_Address_Match__c</fullName>
        <label>PP Address Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paying_full_value__c</fullName>
        <label>Paying full value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Other payment method</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Reference__c</fullName>
        <label>Payment_Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_confirmed_by_other_method__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment confirmed by other method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_day_for_offer_letter__c</fullName>
        <formula>IF( AND(DDPreferredPaymentDate__c = 1 ),&apos;st&apos;, 
IF( AND(DDPreferredPaymentDate__c = 2 ),&apos;nd&apos;, 
IF( AND(DDPreferredPaymentDate__c = 3 ),&apos;rd&apos;, 
IF( AND(DDPreferredPaymentDate__c = 4 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 5 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 6 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 7 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 8 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 9 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 10 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 11 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 12 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 13 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 14 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 15 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 16 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 17 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 18 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 19 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 20 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 21 ),&apos;st&apos;, 
IF( AND(DDPreferredPaymentDate__c = 22 ),&apos;nd&apos;, 
IF( AND(DDPreferredPaymentDate__c = 23 ),&apos;rd&apos;, 
IF( AND(DDPreferredPaymentDate__c = 24 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 25 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 26 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 27 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 28 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 29 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 30 ),&apos;th&apos;, 
IF( AND(DDPreferredPaymentDate__c = 31 ),&apos;st&apos;,null)))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment day for offer letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_none_comments__c</fullName>
        <label>Payment none comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planning_consent_Building_regulation__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Planning consent/Building regulation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Val_Dec_1_Date__c</fullName>
        <label>Post Val Dec 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Val_Dec_1__c</fullName>
        <label>Post Val Dec 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Further Information Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_offer_update__c</fullName>
        <description>Change requested by Rizwan 00642503</description>
        <label>Post offer update</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_val_decision_1_underwriter__c</fullName>
        <description>For use with credit risk reporting</description>
        <label>Post-val decision 1 underwriter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_val_decision_2_underwriter__c</fullName>
        <description>For use with credit risk reporting</description>
        <label>Post-val decision 2 underwriter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_valuation_decision_2__c</fullName>
        <label>Post Val Dec 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_valuation_decision_date__c</fullName>
        <label>Post Val Dec 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Val_1_Date__c</fullName>
        <label>Pre Val 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Val_2_Date__c</fullName>
        <label>Pre Val 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Val_Dec_1__c</fullName>
        <label>Pre Val Dec 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Further Information Required</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Val_Dec_2__c</fullName>
        <label>Pre Val Dec 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Further Information Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_val_decision_1_underwriter__c</fullName>
        <description>For use with credit risk reporting</description>
        <label>Pre-val decision 1 underwriter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_val_decision_2_underwriter__c</fullName>
        <description>For use with credit risk reporting</description>
        <label>Pre-val decision 2 underwriter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premier_Arrangement_Fee_Taken__c</fullName>
        <label>Premier Arrangement Fee Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_extended_opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_extended_opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_extended_opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductExpiryDate__c</fullName>
        <formula>Opportunity__r.IBB_Product__r.expiry_date_of_fixed_product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductExpiryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Fee_Amount__c</fullName>
        <label>Product Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Fee_Received__c</fullName>
        <label>Product Fee Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Fee_Taken__c</fullName>
        <label>Product Fee Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Bungalow</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Maisonette</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_be_used_for_trade_purposes__c</fullName>
        <description>Will the property be used for trade purposes?</description>
        <label>Property be used for trade purposes?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_details__c</fullName>
        <label>Property details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Property_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Detached</fullName>
                </value>
                <value>
                    <fullName>Semi-detached</fullName>
                </value>
                <value>
                    <fullName>Mid terrace</fullName>
                </value>
                <value>
                    <fullName>End terrace</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_guarantee__c</fullName>
        <label>Property guarantee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_let_to_family_or_company__c</fullName>
        <label>Property let to family or company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_price_ROT_match__c</fullName>
        <label>Purchase price ROT match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_price_ROT_match_comments__c</fullName>
        <label>Purchase price ROT match comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REATContact3rdProgressCheck__c</fullName>
        <inlineHelpText>Follow up call being made between 14-30 days after offer has been sent.</inlineHelpText>
        <label>Sales Support Contact 3rd Progress Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REAT_10_Day_Offer_Expiry_Letter_Sent__c</fullName>
        <inlineHelpText>This field should be completed when the letter has been sent.</inlineHelpText>
        <label>REAT 10 Day Offer Expiry Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REAT_Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Support Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_extended_opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REAT_Follow_up_call_made__c</fullName>
        <inlineHelpText>This call should be made after 12 days after the offer has been sent out.</inlineHelpText>
        <label>Sales Support Follow up call made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROTSentFromSolicitor__c</fullName>
        <label>ROTSentFromSolicitor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROT_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For use in Martineau Integration</description>
        <label>ROT Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROT_Decision_Date__c</fullName>
        <label>ROT Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROT_Received__c</fullName>
        <label>ROT Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROT_acceptable__c</fullName>
        <label>ROT acceptable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROT_comments_as_not_acceptable__c</fullName>
        <label>ROT comments as not acceptable</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ROT_latest_offer_date__c</fullName>
        <label>ROT latest offer date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROT_latest_offer_date_comments__c</fullName>
        <label>ROT latest offer date comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ROT_signed_by_solicitors__c</fullName>
        <label>ROT signed by solicitors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROT_signed_by_solicitors_comments__c</fullName>
        <label>ROT signed by solicitors comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ready_for_credit_to_pre_val_date_1__c</fullName>
        <formula>Pre_Val_1_Date__c  -  Opportunity__r.Ready_for_credit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready for credit to pre val date 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_abandonment__c</fullName>
        <label>End of application reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Change of Property</fullName>
                </value>
                <value>
                    <fullName>FI not supplied</fullName>
                </value>
                <value>
                    <fullName>Change of bank</fullName>
                </value>
                <value>
                    <fullName>No longer moving/buying</fullName>
                </value>
                <value>
                    <fullName>U/W decision based on FI</fullName>
                </value>
                <value>
                    <fullName>U/W decision based on special condition</fullName>
                </value>
                <value>
                    <fullName>U/W decision during re-assessment</fullName>
                </value>
                <value>
                    <fullName>U/W decision based on conveyancing</fullName>
                </value>
                <value>
                    <fullName>Offer expired</fullName>
                </value>
                <value>
                    <fullName>Valuation expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_funds_return__c</fullName>
        <description>C00179</description>
        <label>Reason for funds return</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vendor has pulled out</fullName>
                </value>
                <value>
                    <fullName>Unclear of completion date</fullName>
                </value>
                <value>
                    <fullName>Someone along the chain has pulled out</fullName>
                </value>
                <value>
                    <fullName>Landlord/tenant  legal o/s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_offer_reissue__c</fullName>
        <description>C00203</description>
        <label>Reason for offer reissue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offer expired</fullName>
                </value>
                <value>
                    <fullName>Incorrect details</fullName>
                </value>
                <value>
                    <fullName>Product Change</fullName>
                </value>
                <value>
                    <fullName>Term Change</fullName>
                </value>
                <value>
                    <fullName>Change of Address</fullName>
                </value>
                <value>
                    <fullName>Applicant change</fullName>
                </value>
                <value>
                    <fullName>Valuation</fullName>
                </value>
                <value>
                    <fullName>Purchase price</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_update__c</fullName>
        <label>Reason for update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Missing documents</fullName>
                </value>
                <value>
                    <fullName>Incomplete documents signed</fullName>
                </value>
                <value>
                    <fullName>Change to details</fullName>
                </value>
                <value>
                    <fullName>Photocopy/not original documents</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receipt_of_funds_from_IBB_solicitors__c</fullName>
        <label>Receipt of funds from our solicitors</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_ROT__c</fullName>
        <label>Date ROT Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Redemption_Amount__c</fullName>
        <description>This will be used to enter the actual amount of finance repaid at redemption</description>
        <inlineHelpText>This will be used to enter the actual amount of finance repaid at redemption</inlineHelpText>
        <label>Redemption Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RegionClass__c</fullName>
        <description>C00196</description>
        <label>RegionClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_leasehold_term__c</fullName>
        <label>Remaining leasehold term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Income_Cover__c</fullName>
        <label>Rent Income Cover</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RentalRateMargin__c</fullName>
        <formula>Opportunity__r.IBB_Product__r.IBB_Finance_Rental_Rate_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RentalRateMargin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rental_Rate_Type__c</fullName>
        <formula>TEXT(Opportunity__r.IBB_Product__r.Rental_Rate_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rental Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Date__c</fullName>
        <label>Solicitors Requested Completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retention_required__c</fullName>
        <inlineHelpText>To be updated by underwriting when a retention of funds is required.</inlineHelpText>
        <label>Retention required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDLT_Received_by_SGH_Martineau__c</fullName>
        <label>SDLT Received by SGH Martineau</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDLT_received__c</fullName>
        <label>SDLT received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDLT_sent_to_IBB_solicitors__c</fullName>
        <label>SDLT sent to our solicitors</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SGH_Martineau_case_owner_email__c</fullName>
        <description>For use with sending the &apos;funds sent&apos; notification to the fee earner at SGH Martineau</description>
        <label>SGH Martineau case owner email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SMS_Mobile_Number__c</fullName>
        <description>Number to send SMS updates to</description>
        <formula>IF(TEXT(  Opportunity__r.Account.International_number__c ) = &apos;No&apos;,  Opportunity__r.Account.SMS_Mobile_Number_Final__c  , Opportunity__r.Account.SMS_Mobile_Correct_Format__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS Mobile Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_Most_Recent_F_I_Received_Cust__c</fullName>
        <description>Date most recent F.I received from customer to Sales support</description>
        <label>SS Most Recent F.I Received Cust</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SS_Most_Recent_F_I_Request_Cust__c</fullName>
        <description>Date F.I requested from Customer by Sales Support</description>
        <label>SS Most Recent F.I Request Cust</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Support_Comments__c</fullName>
        <label>Sales Support Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Second_Credit_Check__c</fullName>
        <label>Second Credit Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_credit_check_decision__c</fullName>
        <label>Second credit check decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sellers_delegated_approver_email__c</fullName>
        <label>Sellers delegated approver email</label>
        <type>Email</type>
    </fields>
</CustomObject>